--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "akar-icons": "^1.9.31",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
