--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storage:clear": "rm -rf src/server/storage/*"
   },
   "dependencies": {
     "akar-icons": "^1.9.31",
@@ -15,7 +16,8 @@
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
